[project]
name = "machine-learning-basics"
version = "0.1.0"
description = ""
authors = [
    {name = "Navjot",email = "navjotkauriit@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "notebook (>=7.5.0,<8.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
